package homework2;

import java.awt.Graphics;

public abstract class MyGraph {
    public abstract void draw(Graphics g);
}
